M2: Room 3 database as the single source of truth, staleness-proof sync
- core:database: Room 3 (3.1 alpha) on the bundled SQLite driver; tables
  for rooms, space edges, top-level spaces, events, room state, timeline,
  receipts, account data, invites and sync meta. Read DAO with Flows for
  counts, rooms by recency, top-level spaces and a space's children
- SyncIngestor: one write transaction per frame, and the stream's
  ResumeStore so position and data can't disagree. Freshness rules:
  * room metadata / account data / space child lists replaced, never merged
    (a removed avatar or name becomes NULL)
  * left rooms deleted with events, state, timeline, receipts, invites,
    child edges and top-level entry
  * full sync = mark-and-sweep by generation, committed at init_complete;
    until then no catch-up timestamp, so an interrupted snapshot is redone
    in full instead of "caught up" with holes
  * identity check: a different Matrix user or gomuks device behind the
    backend wipes everything and forces a full sync (ResyncRequired)
  * full resync when the last one is older than 24 h (backstop for the
    catch-up gap gomuks has for child-side m.space.parent changes)
  * joining a room clears its invite; invites and global account data are
    swept after a full sync
- GomuksConnection no longer derives the catch-up timestamp; the store does
- Status screen reads counts from the database (instant on cold start)
- Tests: 10 freshness tests on real SQLite (Robolectric), account-switch
  regression against the DB, opt-in LiveIngestTest

Live: webmuks (583 rooms, 66 spaces, 158 DMs) cold into an empty DB in
1.8 s; restart with the same DB resumes as a catch-up in 67 ms.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>